<resources>
    <string name="language_tag">en</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="or">Or</string>
    <string name="privacy_policy_url">https://cloud.squashc.com/privacy/</string>
    <string name="main_banner" translatable="false">ca-app-pub-5161149668539506/1257131065</string>
    <string name="main_rewarded" translatable="false">ca-app-pub-5161149668539506/2830793531</string>
    <string name="app_name" translatable="false">Squash</string>
    <string name="uspery" translatable="false">Uspery</string>
    <string name="intro_description">Choose a way to start.</string>
    <string name="create_account">Create account</string>
    <string name="have_an_account_already"><font color='#504F4F'>Have an account already?</font> <font color='#10ace0'>Log in</font></string>
    <string name="create_your_account">Create your account</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="please_enter_a_valid_email">Please enter a valid email.</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="age_warning">Minimum age to create an account is 13 years old.</string>
    <string name="password_cannot_contain_spaces">Password cannot contain spaces</string>
    <string name="password_needs">Your password needs at least 8 characters, 1 letter, 1 number and a special character.</string>
    <string name="next">Next</string>
    <string name="please_enter_a_valid_phone_number">Please enter a valid phone number.</string>
    <string name="it_is_necessary_last_name">It is necessary to enter at least your last name.</string>
    <string name="customize_your_experience">Customize your experience</string>
    <string name="get_more_out_to_squash">Get more out to Squash</string>
    <string name="receive_email_terms">Receive email about your Squash activity and recommendations.</string>
    <string name="personalize_based_on_your_inferred">Personalize based on your inferred identity</string>
    <string name="desc_personalize_based_inferred">Squash will always personalize your experience based on information you\'ve provided, as well as the devices you\'ve used to log in. When this setting is enabled, Squash may also personalize based on other inferences about your identity, like devices and browsers you haven\'t used to log in to Squash or email addresses and phone numbers similar to those linked to your Squash account.</string>
    <string name="account_was_created">Your Squash account has been successfully created. To proceed with the app, you need to confirm your email. We send an email with an explanation of the email explanation via verification code.</string>
    <string name="email_is_already_used">This email has already been used in another account, please change the email provided.</string>
    <string name="phone_is_already_used">This mobile number is already in use, please change the number entered.</string>
    <string name="bad_username">The specified username is not suitable, please change the username.</string>
    <string name="weHaveAProblem">Servers have temporary failures, please try starting the app again later.</string>
    <string name="default_bio">Hi, I\'m new here at Squash.</string>
    <string name="we_sent_you_a_code">We sent you a code</string>
    <string name="the_code_has_been_sent">The code has been sent to <b>%1$s</b>, enter it below to verify your account.</string>
    <string name="the_code_has_been_sent_no_email">When this account was created a verification email was sent but the account was not validated as the code was not entered in the field below, please enter the validation code in the box below.</string>
    <string name="validation_code">Validation code</string>
    <string name="did_not_receive_email">Didn\'t receive email?</string>
    <string name="resend_code">Resend code</string>
    <string name="resend_code_desc">If you have not obtained the validation code in your email, just click on the <font color='#10ace0'>resend code</font> button to receive the code.</string>
    <string name="the_validation_code_is_invalid">The validation code is invalid.</string>
    <string name="unable_to_login">We were unable to log into your account due to your email being pending.</string>
    <string name="account_will_not_be_validated_leave">If you leave this page your account will not be validated and you will not be able to login.\nReally want to leave?</string>
    <string name="email_or_username">E-mail or username.</string>
    <string name="login_to_squash">Log in to Squash.</string>
    <string name="forgot_your_password">Esqueceu sua senha?</string>
    <string name="login_or_password_invalid">Login or password invalid.</string>
    <string name="squash_corporation">Squash Corporation</string>
    <string name="your_story">Your Story</string>
    <string name="under_development">Under Development</string>
    <string name="share">Share</string>
    <string name="search_with_dots">Search…</string>
    <string name="following">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="you_are_without_internet">You are without internet connection</string>
    <string name="navigating_" translatable="false">Navigating…</string>
    <string name="login">Log in</string>
    <string name="logout">Logout</string>
    <string name="type_a_message">Type a message…</string>
    <string name="the_message_cannot_be_empty">The message cannot be empty.</string>
    <string name="seen">Seen</string>
    <string name="delivered">Delivered</string>
    <string name="online" translatable="false">Online</string>
    <string name="new_message">New message</string>
    <string name="chats">Chats</string>
    <string name="typing">typing…</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="setting">Settings</string>
    <string name="starred_messages">Starred messages</string>
    <string name="my_account">My account</string>
    <string name="pin">Pin</string>
    <string name="post">Post</string>
    <string name="whats_up">What\'s up…</string>
    <string name="user_not_found">User not found</string>
    <string name="no_posts_yet">No posts yet</string>
    <string name="not_possible_start_a_chat">It is not possible to start a conversation with this user at time.</string>
    <string name="replied_to_yourself">Replied to yourself</string>
    <string name="reply_to">Reply to</string>
    <string name="delete_message_for_everyone">Delete message for everyone?</string>
    <string name="cancel">Cancel</string>
    <string name="view_profile">View profile</string>
    <string name="medias">Medias</string>
    <string name="wallpaper" translatable="false">Wallpaper</string>
    <string name="select_an_image">Select an image</string>
    <string name="desc_encrypted_message_chat">Messages are all encrypted. No one outside of this chat, not even Squash, can read to them.</string>
    <string name="loading">Loading…</string>
    <string name="msg_background_chat_under_development">The following process is under development, however, it may fail to be used.\nAre you sure you want to proceed?</string>
    <string name="report_website"><font color='#FD0000'>Report Website</font></string>
    <string name="report_user"><font color='#FD0000'>Report User</font></string>
    <string name="refresh">Refresh</string>
    <string name="open_with">Open with …</string>
    <string name="copy_link">Copy Link</string>
    <string name="update_later">Update Later</string>
    <string name="have_new_version">We have a new application update available (%1$s), to ensure better experience in our application we recommend that you update.</string>
    <string name="need_login_msg">To access this function it is necessary to be logged in.\nWould you like to login?</string>
    <string name="url_copied">URL copied to your clipboard</string>
    <string name="secure_website"><font color='#98F33C'>This website is using a secure connection.</font>\nInformation shared with this website, such as passwords or credit card numbers, is submitted securely</string>
    <string name="not_secure_website"><font color='#FD0000'>This site is not using a secure connection.</font>\nInformation shared with this site, such as passwords or credit card numbers, is not sent securely</string>
    <string name="remove_image">Remove image</string>
    <string name="desc_remove_image_post">Do you want to remove the selected image from your post?</string>
    <string name="username_is_already_in_use">Username is already in use.</string>
    <string name="required_field">Required field</string>
    <string name="desc_reason_empty_timeline">Hi, your timeline is empty, this is the time for you to show your interests to the world, make your first post</string>
    <string name="username">Username</string>
    <string name="bio" translatable="false">Bio</string>
    <string name="delete_post">Delete Post</string>
    <string name="delete_post_message">Do you really want to delete your post?\nThis will result in the loss of likes and comments.</string>
    <string name="post_not_found">Post not found</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="updatenow">Update now</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="maybe_you_like_it">Maybe you like it</string>
    <string name="empty_recommendation_feed">Your recommendation feed is currently empty, come back later to see what\'s new</string>
    <string name="developer_post">Developer post</string>
    <string name="there_are_no_message">There are no messages here yet…</string>
    <string name="notification_and_sounds">Notifications and sounds</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="sort_by">Sort by</string>
    <string name="default_title">Default</string>
    <string name="date_followed_latest">Date Followed: Latest</string>
    <string name="date_followed_earliest">Date Followed: Earliest</string>
    <string name="reason_for_report">Reason for report</string>
    <string name="report_desc">Your report is anonymous, except if you`re reporting and intellectual property infringement. If someone is immediate danger, call the local emergency services - don\'t wait.</string>
    <string name="why_are_you_reporting_this_account">Why are you reporting this account?</string>
    <string name="report_post_message_or_comment">Report Post, Message or Comment</string>
    <string name="report_account">Report Account</string>
    <string name="personal_information_info">Provide your personal information, even if the account is used for a business, a pet or something else. This won\'t be part of your public profile.</string>
    <string name="phone_number">Phone number</string>
    <string name="birthday">Birthday</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_your_birthday_date">Enter Your Birthday date</string>
    <string name="minimum_age_to_use_the_platform">The minimum age to use our platform is 13 years old.</string>
    <string name="document_type">Document type</string>
    <string name="general_registry_rg">General Registry (RG)</string>
    <string name="passport">Passport</string>
    <string name="drivers_license">Driver\'s license</string>
    <string name="recent_utility_bill">Recent utility bill</string>
    <string name="article_of_incorporation">Article of incorporation</string>
</resources>