<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sheet_report_user"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="7dp"
    android:background="@drawable/background_sheet_base"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Title -->
    <TextView
        android:id="@+id/error_title_problem_adapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reason_for_report"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_gravity="center"/>

    <!-- Dividing line -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:visibility="visible"
        android:layout_gravity="center"
        android:background="@color/transparent_black"/>

    <!-- Title Why Report -->
    <TextView
        android:id="@+id/text_why_are_you_reporting_this_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/why_are_you_reporting_this_account"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"/>

    <!-- Main Text -->
    <TextView
        android:id="@+id/txt_version_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/report_desc"
        android:textColor="@color/hint"
        android:textSize="16sp" />

    <!-- Report Post, Message or Comment Text -->
    <TextView
        android:id="@+id/txt_report_post_message_or_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/report_post_message_or_comment"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <!-- Report Account Text -->
    <TextView
        android:id="@+id/txt_report_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/report_account"
        android:textColor="@color/black"
        android:textSize="17sp" />

</LinearLayout>