<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activitys.EditProfileActivity">

    <!-- Img User Story -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ic_edit_ProfileUser"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_profile_default"
        app:civ_border_color="@color/base_color"
        app:civ_border_width="1dp" />

    <EditText
        android:id="@+id/edit_name"
        android:maxLength="25"
        android:hint="@string/name"
        android:backgroundTint="@color/hint"
        android:textColorHint="@color/hint"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_username"
        android:hint="@string/username"
        android:backgroundTint="@color/hint"
        android:textColorHint="@color/hint"
        android:textColor="@color/black"
        android:maxLength="20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_bio"
        android:hint="@string/bio"
        android:backgroundTint="@color/hint"
        android:textColorHint="@color/hint"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_edit_profile"
        android:layout_width="wrap_content"
        android:minWidth="200dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        android:background="@drawable/background_button_following"/>

</LinearLayout>