<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sheet_sort_by_following"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/background_sheet_base_dark"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Main Text -->
    <TextView
        android:id="@+id/txt_short_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="350dp"
        android:text="@string/sort_by"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="19sp" />

    <!-- Default -->
    <CheckBox
        android:id="@+id/filter_default_following"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_title"
        android:textSize="17sp"
        android:checked="true"
        android:button="@drawable/custom_round_checkbox"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:layoutDirection="rtl"/>

    <!-- Default -->
    <CheckBox
        android:id="@+id/filter_date_followed_latest_following"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@drawable/custom_round_checkbox"
        android:text="@string/date_followed_latest"
        android:textSize="17sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:layoutDirection="rtl"/>

    <!-- Default -->
    <CheckBox
        android:id="@+id/filter_date_followed_earliest_following"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@drawable/custom_round_checkbox"
        android:text="@string/date_followed_earliest"
        android:textSize="17sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:layoutDirection="rtl"/>

</LinearLayout>