<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sheet_app_update_menu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/background_sheet_base"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Main Text -->
    <TextView
        android:id="@+id/txt_version_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:maxWidth="350dp"
        android:text="@string/have_new_version"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <!-- Btn Update Now -->
    <androidx.cardview.widget.CardView
        android:id="@+id/btn_update_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:minWidth="130dp"
        android:minHeight="50dp"
        app:cardBackgroundColor="@color/base_color"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Text Ok -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/updatenow"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <!-- Btn Update Later -->
    <LinearLayout
        android:id="@+id/btn_update_later"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:minWidth="130dp"
        android:minHeight="50dp"
        android:background="@drawable/custom_edit_chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:text="@string/update_later"/>

    </LinearLayout>

</LinearLayout>